# Fastboi

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README  README.md  compile_commands.json  makefile  minecraft.exp  minecraft.lib  source.env  targets.env
data/: tile_data.json
dox/doc/: Camera.dox  FastboiCore.dox  Gameobject.dox
examples/: FastboiCore.cpp  Gameobject.cpp
inc/: Utility.h
inc/ctti/: type_id.hpp
inc/nano_ss/: nano_mutex.hpp  nano_observer.hpp  nano_signal_slot.hpp
inc/soloud/: soloud.h  soloud_wav.h
res/: Sprite-0001.aseprite
src/: AABB.cpp  AABB.h  AABBTree.cpp  AABBTree.h  Angles.cpp  Angles.h  Application.cpp  Application.h  Archetype.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  BoxColorRenderer.cpp  BoxColorRenderer.h  CacheLineSize.c  CacheLineSize.h  Camera.cpp  Camera.h  ChangeObserver.h  ClickTarget.h  Collider.cpp  Collider.h  Collision.cpp  Collision.h  CollisionMask.cpp  CollisionMask.h  ColorComp.h  Component.h  ComponentReqs.h  Events.h  Exceptions.h  Fastboi.h  FastboiComps.h  FastboiCore.cpp  FastboiCore.h  GORef.cpp  GORef.h  Gameobject.cpp  Gameobject.h  GameobjectAllocator.cpp  GameobjectAllocator.h  (+42 more)
src/Slowboi/: Button.cpp  Button.h  Game.cpp  Game.h  GroundBG.cpp  GroundBG.h  Player.cpp  Player.h  RequiresTest.cpp  RequiresTest.h
src/UI/: Button.cpp  Button.h  CommonLayouts.h  Screen.cpp  Screen.h  ScreenspaceExpression.h
src/adventure/: Bridge.cpp  Bridge.h  Chalise.cpp  Chalise.h  Dragon.cpp  Dragon.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Gate.cpp  Gate.h  Item.cpp  Item.h  Layouts.cpp  Layouts.h  Level.cpp  Level.h  Magnet.cpp  Magnet.h  Player.cpp  Player.h  Room.cpp  Room.h  RoomCamera.h  TestSystem.cpp  TestSystem.h  main.cpp
src/containmentsimulator/: Button.cpp  Button.h  CameraController.cpp  Game.cpp  (+10 more)
(+16 files in other folders)
